[project]
name = "lyik_messaging"
version = "0.1.0"
description = "Minimal FastStream-based messaging library with strict typing and transparent AES-GCM support"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "LYIK" }]
dependencies = [
    "faststream[rabbit,redis]>=0.6.7",
    "cryptography>=42.0.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["lyik_messaging*"]